--- a/FTDIDeviceControl/ftdidevicecontrol.qrc
+++ b/FTDIDeviceControl/ftdidevicecontrol.qrc
@@ -1,4 +1,5 @@
 <RCC>
-    <qresource prefix="FTDIDeviceControl">
-    </qresource>
+  <qresource prefix="FTDIDeviceControl">
+    <file>camera16.png</file>
+  </qresource>
 </RCC>
