--- a/FTDIDeviceControl/ftdidevicecontrol.ui
+++ b/FTDIDeviceControl/ftdidevicecontrol.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>678</width>
-    <height>549</height>
+    <width>710</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -81,12 +81,23 @@
         <widget class="QLineEdit" name="leSend"/>
        </item>
        <item row="0" column="1" rowspan="5">
-        <widget class="QTextEdit" name="teReceive"/>
+        <widget class="QTextEdit" name="teReceive">
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
+        </widget>
        </item>
        <item row="1" column="0">
         <widget class="QPushButton" name="pbClose">
          <property name="text">
           <string>Close</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0">
+        <widget class="QPushButton" name="pbClear">
+         <property name="text">
+          <string>Clear</string>
          </property>
         </widget>
        </item>
