--- a/FTDIDeviceControl/ftdidevicecontrol.ui
+++ b/FTDIDeviceControl/ftdidevicecontrol.ui
@@ -450,6 +450,12 @@
            </item>
            <item>
             <widget class="QWidget" name="widget" native="true">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
              <property name="minimumSize">
               <size>
                <width>45</width>
@@ -492,9 +498,6 @@
                </widget>
               </item>
              </layout>
-             <zorder>teReceive</zorder>
-             <zorder>teReceive</zorder>
-             <zorder>teModuleMessages</zorder>
             </widget>
            </item>
           </layout>
