--- a/FTDIDeviceControl/ftdidevicecontrol.ui
+++ b/FTDIDeviceControl/ftdidevicecontrol.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>782</width>
-    <height>710</height>
+    <width>747</width>
+    <height>643</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -768,6 +768,13 @@ background-color: grey;
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="pbClearFrameFolder">
+             <property name="text">
+              <string>Delete all</string>
              </property>
             </widget>
            </item>
